Everything is ok

--- a/Settings/settings.json
+++ b/Settings/settings.json
@@ -51,6 +51,10 @@
       "StaffRoles": {
          "MIN_STAFF": "921722923767701555",
          "MAX_STAFF": "",
+         
+         "OwnerRoles": ["921722831992135721", "921722593051025439"],
+         "HighStaffs": ["921722920441614376", "921722921414697032"],
+         "LowStaffs": ["921722922811404389", "921722923297935391", "921722923767701555"],
          "Registry": {
             "REGISTER": "921723837979193424"
          },
