--- a/Settings/settings.json
+++ b/Settings/settings.json
@@ -43,7 +43,8 @@
       "Colors": {
          "BOY_COLOR": "#24C4FF",
          "GIRL_COLOR": "#EA24FF",
-         "ERROR_COLOR": "#E50909"
+         "ERROR_COLOR": "#E50909",
+         "SUCCESS_COLOR": "#0bf27b"
       }
    },
 
