--- a/Settings/settings.json
+++ b/Settings/settings.json
@@ -1,7 +1,7 @@
 {
    "ClientSettings": {
       "SERVER": "921722201051365426",
-      "TOKEN": "",
+      "TOKEN": "ADD YOUR TOKEN HERE DONT WORRY I WILL CHANGE MY TOKEN :)",
       "PREFIX": "!",
       "BOT_VOICE_CHANNEL": "921730205310124073",
       "DEVELOPERS": ["752469034997514305"]
